<resources>
    <string name="app_name">Krama Sipandu Beradat</string>
    <string name="sipandu_beradat">Sipandu Beradat</string>
    <string name="belum_mempunyai_akun">Belum mempunyai akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="daftar">Daftar</string>
    <string name="simpan">Simpan</string>
    <string name="kembali">Kembali</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="nik">NIK</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="banjar">Banjar</string>
    <string name="desa_adat">Desa Adat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="no_telepon">No Telepon</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="profil">Profil</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="darurat">Darurat</string>
    <string name="menunggu_validasi">Menunggu Validasi</string>
    <string name="menunggu_petugas">Menunggu Petugas</string>
    <string name="selesai">Selesai</string>
    <string name="ilustrasi_awal">Ilustrasi Awal</string>
    <string name="ubah_nama_lengkap">Ubah Nama Lengkap</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="ubah_jenis_kelamin">Ubah Jenis Kelamin</string>
    <string name="pelaporan">Pelaporan</string>
    <string name="pengajuan_keluhan">Pengajuan Keluhan</string>
    <string name="keluhan">Keluhan</string>
    <string name="jenis_keluhan">Jenis Keluhan</string>
    <string name="lokasi_keluhan">Lokasi Keluhan</string>
    <string name="foto_keluhan">Foto Keluhan</string>
    <string name="ajukan_keluhan">Ajukan Keluhan</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="status">Status</string>
    <string name="pelaporan_darurat">Pelaporan Darurat</string>
    <string name="berita">Berita</string>
    <string name="riwayat_pelaporan">Riwayat Pelaporan</string>
    <string name="data_diri">Data Diri</string>
    <string name="alamat">Alamat</string>
    <string name="kerabat">Kerabat</string>
    <string name="ubah">Ubah</string>
    <string name="kategori">Kategori</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="negara">Negara</string>
    <string name="provinsi">Provinsi</string>
    <string name="ubah_alamat">Ubah Alamat</string>
    <string name="daynight">Day Night</string>
    <string name="nama_pengguna_helper">Masukkan nama pengguna dari kerabat untuk mulai proses pencarian</string>
    <string name="pencarian_kerabat">Pencarian Kerabat</string>
    <string name="ubah_lokasi">Ubah Lokasi</string>
    <string name="konfirmasi_pelaporan_darurat">Apakah Anda yakin ingin membuat pelaporan darurat ini?</string>
    <string name="batal">Batal</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="tambah_kerabat">Tambah Kerabat</string>
    <string name="judul">Judul</string>
    <string name="keterangan">Keterangan</string>
    <string name="foto">Foto</string>
    <string name="tidak_ditemukan">Tidak Ditemukan</string>
    <string name="deskripsi_tidak_ditemukan">Mohon maaf, profil yang Anda cari tidak ditemukan.
        Silahkan masukkan nama pengguna yang benar</string>
    <string name="lewati">Lewati</string>
    <string name="lanjut">Lanjut</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="deskripsi_selamat_datang">Silahkan masuk terlebih dahulu untuk dapat membuat pelaporan</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="deskripsi_data_diri">Mohon lengkapi data diri Anda dengan benar</string>
    <string name="deskripsi_foto_profil">Anda dapat menambahkan foto profil sekarang atau melewatinya
        dan menambahkannya nanti</string>
    <string name="kontak">Kontak</string>
    <string name="deskripsi_kontak">Lengkapi data kontak Anda untuk memudahkan pendataan di Desa Adat</string>
    <string name="lokasi_rumah">Lokasi Rumah</string>
    <string name="beranda">Beranda</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="filter">Filter</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="kosong">Kosong</string>
    <string name="deskripsi_riwayat_kosong">Data riwayat pelaporan tidak ditemukan. Silahkan ajukan pelaporan terlebih dahulu</string>
    <string name="pelapor">Pelapor</string>
    <string name="deskripsi_pengajuan_keluhan">Mohon lengkapi data berikut agar keluhan Anda dapat ditindaklanjuti</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="deskripsi_data_diri_profil">Detail data pengguna</string>
    <string name="deskripsi_alamat">Detail alamat pengguna</string>
    <string name="deskripsi_ubah_kata_sandi">Pergantian kata sandi</string>
    <string name="deskripsi_kerabat">Kerabat Anda akan memperoleh notifikasi ketika Anda membuat suatu pelaporan</string>
    <string name="deskripsi_pencarian_kerabat">Cari kerabat berdasarkan nama</string>
    <string name="deskripsi_kerabat_kosong">Data kerabat tidak ditemukan. Silahkan tambahkan kerabat terlebih dahulu</string>
    <string name="terima">Terima</string>
    <string name="tolak">Tolak</string>
    <string name="deskripsi_permintaan_kerabat_kosong">Data permintaan kerabat kosong</string>
    <string name="kategori_pelaporan">Kategori Pelaporan</string>
    <string name="jenis_pelaporan">Jenis Pelaporan</string>
    <string name="kategori_pelapor">Kategori Pelapor</string>
    <string name="krama">Krama</string>
    <string name="wisatawan">Wisatawan</string>
    <string name="rentang_tanggal">Rentang Tanggal</string>
    <string name="awal">Awal</string>
    <string name="akhir">Akhir</string>
    <string name="reset">Reset</string>
    <string name="terapkan">Terapkan</string>
    <string name="berangkat">Berangkat</string>
    <string name="tidak_valid">Tidak Valid</string>
    <string name="valid">Valid</string>
    <string name="nyalakan_e_kulkul">Nyalakan E-Kulkul</string>
    <string name="refresh">Refresh</string>
    <string name="deskripsi_penindak_kosong">Mohon maaf, pelaporan Anda belum ada yang menangani. Sabar ya..</string>
    <string name="deskripsi_bukti_foto">Bukti penanganan belum diunggah oleh petugas</string>
    <string name="unggah_foto_penanganan">Unggah Foto Penanganan</string>
    <string name="bukti_foto_kosong">Tekan area ini untuk memilih foto bukti penanganan</string>
    <string name="maks_file">Maksimal 5MB</string>
    <string name="deksripsi_unggah_foto_penanganan">Mohon unggah foto sebagai bukti penanganan dari pelaporan yang anda tangani,
        file foto dapat berupa .png, .jpeg, .jpg, atau .gif</string>
    <string name="unggah">Unggah</string>
    <string name="deskripsi_laporan_kosong">Tidak ditemukan data laporan yang sesuai</string>
    <string name="daftar_e_kulkul">Daftar E-kulkul</string>
    <string name="deskripsi_e_kulkul_kosong">Belum ada E-Kulkul yang terpasang di desa adat</string>
    <string name="terverifikasi">Terverifikasi</string>
    <string name="pecalang">Pecalang</string>
    <string name="durasi_e_kulkul">Durasi E-Kulkul</string>
    <string name="deskripsi_durasi_e_kulkul">Atur durasi nyala E-Kulkul dalam satuan menit dengan mengisi kolom berikut</string>
    <string name="menit">Menit</string>
    <string name="admin">Admin</string>
    <string name="maksimal_karakter">Maksimal 255 karakter</string>
    <string name="penutupan_jalan">Penutupan Jalan</string>
    <string name="deskripsi_penutupan_jalan">Mohon lengkapi data mengenai rencana penutupan jalan dengan benar</string>
    <string name="waktu_mulai">Waktu Mulai</string>
    <string name="waktu_selesai">Waktu Selesai</string>
    <string name="bukti_foto_kosong_penutupan_jalan">Tekan area ini untuk memilih foto bukti penutupan jalan</string>
    <string name="tambah">Tambah</string>
    <string name="urungkan">Urungkan</string>
    <string name="jalan_ditutup">Jalan Ditutup</string>
    <string name="jalan_alternatif">Jalan Alternatif</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="deskripsi_notifikasi_kosong">Belum ada notifikasi yang masuk</string>
    <string name="deskripsi_berita_kosong">Tidak ada kejadian apapun di desa adat</string>
    <string name="otp">One Time Password (OTP)</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="deskripsi_verifikasi">Masukkan kode verifikasi berupa OTP yang telah dikirimkan
        melalui alamat e-mail Anda</string>
    <string name="kirim_kode_ulang">Kirim ulang kode dalam&#160;</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="konfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="lupa_kata_sandi_qm">Lupa Kata Sandi?</string>
    <string name="deskripsi_alamat_email">Masukkan alamat email yang terhubung dengan akun Anda</string>
</resources>