<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/beranda"
        android:contentDescription="@string/beranda"
        android:orderInCategory="0"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/report"
        android:icon="@drawable/ic_alert"
        android:title="@string/pelaporan"
        android:contentDescription="@string/pelaporan"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news"
        android:title="@string/berita"
        android:contentDescription="@string/berita"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/family"
        android:icon="@drawable/ic_family"
        android:title="@string/kerabat"
        android:contentDescription="@string/kerabat"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account"
        android:title="@string/profil"
        android:contentDescription="@string/profil"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />

</menu>