<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_left_arrow"
        android:contentDescription="@string/kembali"
        app:fabCustomSize="40dp"
        app:maxImageSize="20dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_to_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_to_location"
        android:contentDescription="@string/lokasi_keluhan"
        app:fabCustomSize="40dp"
        app:maxImageSize="20dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:src="@drawable/ic_save"
        android:contentDescription="@string/simpan"
        app:fabCustomSize="40dp"
        app:maxImageSize="24dp"
        app:backgroundTint="@color/white"
        app:tint="@color/red_700" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_switch_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/red_700"
            app:cornerRadius="8dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_undo"
            android:contentDescription="@string/urungkan"
            app:fabCustomSize="40dp"
            app:maxImageSize="24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/tambah"
            app:fabCustomSize="40dp"
            app:maxImageSize="24dp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>